--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -1,1 +1,108 @@
 @import '~node_modules/modern-normalize/modern-normalize.css';
+
+
+body {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+      Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    background-color: #fafafa;
+    color: #212121;
+    line-height: 1.5;
+  }
+  
+  
+  * {
+    list-style: none;
+    text-decoration: none;
+  }
+  
+  ul {
+    margin: 0;
+    padding: 0;
+  }
+  
+  h1,h2,h3,p {
+    margin: 0;
+  }
+  
+  img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+  }
+  
+  a {
+    color: inherit;
+  }
+  .container {
+    width: 1200px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #3418c1e8;
+  }
+
+.search-form {
+  position: relative;
+  display: flex;
+  width: 600px;
+  margin: 0 auto;
+  margin-bottom: 40px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+
+  }
+
+  .search-input {
+    height: 40px;
+    flex-grow: 1;
+    font-size: 18px;
+    padding-left: 15px;
+    border: none;
+    border-radius: 6px;
+  }
+  
+  .search {
+    position:absolute;
+    top: 30px;
+    left: 554px;
+    min-width: 46px;
+    min-height: 40px;
+    color: black;
+    background-color: rgba(222, 221, 221, 0.571);
+    font-family: inherit;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    border: none;
+    cursor: pointer;
+    display: block;
+ 
+}
+
+.load-more{
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.gallery {
+  display: grid;
+  max-width: 1140px;
+  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  grid-auto-rows: 240px;
+  grid-gap: 12px;
+  justify-content: center;
+  padding: 0;
+  list-style: none;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.search-icon {
+  fill: currentColor;
+  display: flex;
+  margin: auto;
+}
