--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -1,5 +1,8 @@
 @import '~node_modules/modern-normalize/modern-normalize.css';
-
+:root {
+  --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  --animation-duration: 250ms;
+}
 
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
@@ -36,12 +39,19 @@ body {
     color: inherit;
   }
   .container {
-    width: 1200px;
-    padding-left: 15px;
-    padding-right: 15px;
-    margin-left: auto;
-    margin-right: auto;
-    background-color: #3418c1e8;
+  position: fixed;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  padding-top: 20px;
+  padding-bottom: 20px;
+
+  z-index: 1;
+
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #3418c1e8;
   }
 
 .search-form {
@@ -49,10 +59,6 @@ body {
   display: flex;
   width: 600px;
   margin: 0 auto;
-  margin-bottom: 40px;
-  padding-top: 30px;
-  padding-bottom: 30px;
-
   }
 
   .search-input {
@@ -66,7 +72,7 @@ body {
   
   .search {
     position:absolute;
-    top: 30px;
+    top: 0;
     left: 554px;
     min-width: 46px;
     min-height: 40px;
@@ -84,25 +90,80 @@ body {
 
 .load-more{
   display: flex;
+  min-width: 150px;
+  min-height: 40px;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 30px;
+  background-color: #3418c1e8;
+
+  color: #fafafa;
+  letter-spacing: 0.06em;
+  font-family: inherit;
+  font-style: normal;
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: calc(30/16);
+  align-items: center;
+  justify-content: center;
+
+  border: none;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 5px;
+
+  cursor: pointer;
+  transition: transform var(--timing-function);
+
+  &:hover,
+  &:focus,
+  &:active {
+    transform: scale(1.03);
+  }
+  
 }
 
 .gallery {
   display: grid;
-  max-width: 1140px;
   grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
   grid-auto-rows: 240px;
-  grid-gap: 12px;
+  gap: 65px 15px;
   justify-content: center;
-  padding: 0;
+  padding: 95px 15px 30px 15px;
   list-style: none;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 50px;
 }
 
+
+.info{
+  border: 2px solid #eee;
+  border-top: 0;
+  justify-content: space-between;
+  padding-top: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
+  display: flex;
+}
+
+.info-item{
+  margin-top: 0;
+  margin-bottom: 0;
+  font-size: 14px;
+}
 .search-icon {
   fill: currentColor;
   display: flex;
   margin: auto;
+}
+
+.gallery-image{
+  object-fit: cover;
+  height: 100%;
+  width: 100%;
+}
+
+.hidden {
+  visibility: hidden;
 }
