--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -57,7 +57,7 @@ body {
 .search-form {
   position: relative;
   display: flex;
-  width: 600px;
+  width: 30%;
   margin: 0 auto;
   }
 
@@ -73,7 +73,7 @@ body {
   .search {
     position:absolute;
     top: 0;
-    left: 554px;
+    left: 87%;
     min-width: 46px;
     min-height: 40px;
     color: black;
