--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -58,7 +58,9 @@ body {
   position: relative;
   display: flex;
   width: 350px;
-  margin: 0 auto;
+  // margin: 0 auto;
+  margin-left: auto;
+  margin-right: auto;
   }
 
   .search-input {
