--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -58,7 +58,6 @@ body {
   position: relative;
   display: flex;
   width: 350px;
-  // margin: 0 auto;
   margin-left: auto;
   margin-right: auto;
   }
@@ -76,7 +75,7 @@ body {
     position:absolute;
     top: 0;
     left: 87%;
-    min-width: 46px;
+    width: 46px;
     min-height: 40px;
     color: black;
     background-color: rgba(222, 221, 221, 0.571);
